# todoapp

./: .gitignore
todo-backend/: .env.dev  .env.pytest  README.md  pyproject.toml  requirements.txt
todo-backend/alembic/: env.py
todo-backend/alembic/versions/: 67dbb444baf5_initial_schema.py
todo-backend/app/: config.py  database.py  main.py  models.py
todo-backend/app/models/: __init__.py  todo.py  user.py
todo-backend/app/schemas/: todo.py  user.py
todo-backend/app/services/: todo.py  user.py
todo-backend/app/v1/: todo.py  user.py
todo-backend/scripts/: insert_fixtures.py
todo-backend/tests/: conftest.py  test_user.py
