[project]
name = "todo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn>=0.35.0",
]



# [tool.uv.scripts]
# dev = "uvicorn app.main:app --reload"
